# apartment-finder

./: .env.example  .gitignore  README.md  pyproject.toml
config/: sites.example.yaml
src/: __init__.py  server.py
src/config/: __init__.py  settings.py
src/handlers/: __init__.py  webhook.py
src/messaging/: __init__.py  formatter.py  telegram.py  whatsapp.py
src/models/: __init__.py  database.py  listing.py
src/scrapers/: __init__.py  base.py  playwright_scraper.py  static_scraper.py
