[project]
name = "apartment-finder"
version = "0.1.0"
description = "Scrape rental websites and get WhatsApp notifications for new listings"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.27",
    "playwright>=1.40",
    "beautifulsoup4>=4.12",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "apscheduler>=3.10",
    "fastapi>=0.115",
    "uvicorn>=0.27",
    "aiosqlite>=0.20",
]

[project.scripts]
apartment-finder = "src.server:main"
